添加历史查单

--- a/plus/index.html
+++ b/plus/index.html
@@ -146,7 +146,7 @@
 				</div>
 			</div>
 			<div class="workTables">
-				<a href="javascript:void(0);" class="item" onclick="clicked(this.id)" id="todayoutput.html">
+				<a href="javascript:void(0);" class="item" onclick="clicked(this.id)" id="todayoutputdetail.html">
 					<div class="icon">
 						<img src="../img/timg.jpg" />
 					</div>
@@ -154,7 +154,7 @@
 						今日产量明细
 					</div>
 				</a>
-				<a href="javascript:void(0);" class="item">
+				<a href="javascript:void(0);" class="item" onclick="clicked(this.id)" id="todayoutputcount.html">
 					<div class="icon">
 						<img src="../img/timg.jpg" />
 					</div>
@@ -163,7 +163,7 @@
 					</div>
 				</a>
 				<div class="horizontal-line"></div>
-				<a href="javascript:void(0);" class="item">
+				<a href="javascript:void(0);" class="item" onclick="clicked(this.id)" id="pastoutputdetail.html">
 					<div class="icon">
 						<img src="../img/timg.jpg" />
 					</div>
@@ -171,7 +171,7 @@
 						历史产量明细
 					</div>
 				</a>
-				<a href="javascript:void(0);" class="item">
+				<a href="javascript:void(0);" class="item" onclick="clicked(this.id)" id="pastoutputcount.html">
 					<div class="icon">
 						<img src="../img/timg.jpg" />
 					</div>
@@ -223,10 +223,10 @@
 						<img src="../img/icon_4.png" />
 					</div>
 					<div class="txt">
-						排产检查
+						排产器
 					</div>
 				</div>
-				<div class="item">
+				<div class="item" onclick="clickLink(this.id)" id="test1.html">
 					<div class="icon">
 						<img src="../img/icon_21.png" />
 					</div>
