添加修改载片数量、返工登记、报废登记以及排产器的上下移动功能

--- a/plus/index.html
+++ b/plus/index.html
@@ -179,40 +179,6 @@
 						历史产量统计
 					</div>
 				</a>
-				<div class="horizontal-line"></div>
-				<a href="javascript:void(0);" class="item">
-					<div class="icon">
-						<img src="../img/timg.jpg" />
-					</div>
-					<div class="txt">
-						代人计件
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="item">
-					<div class="icon">
-						<img src="../img/timg.jpg" />
-					</div>
-					<div class="txt">
-						手工录入
-					</div>
-				</a>
-				<div class="horizontal-line"></div>
-				<a href="javascript:void(0);" class="item">
-					<div class="icon">
-						<img src="../img/timg.jpg" />
-					</div>
-					<div class="txt">
-						领货登记
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="item">
-					<div class="icon">
-						<img src="../img/timg.jpg" />
-					</div>
-					<div class="txt">
-						领货记录
-					</div>
-				</a>
 			</div>
 		</div>
 		<!-- 工作台页面 -->
@@ -254,7 +220,7 @@
 				</div>
 			</div>
 			<div class="item-wrapper">
-				<div class="item">
+				<div class="item" onclick="clicked(this.id)" id="changecount.html">
 					<div class="icon">
 						<img src="../img/icon_4.png" />
 					</div>
@@ -272,7 +238,7 @@
 				</div>
 			</div>
 			<div class="item-wrapper">
-				<div class="item">
+				<div class="item" onclick="clicked(this.id)" id="rework.html">
 					<div class="icon">
 						<img src="../img/icon_4.png" />
 					</div>
@@ -290,7 +256,7 @@
 				</div>
 			</div>
 			<div class="item-wrapper">
-				<div class="item">
+				<div class="item" onclick="clicked(this.id)" id="scrap.html">
 					<div class="icon">
 						<img src="../img/icon_4.png" />
 					</div>
