添加服务器接口

--- a/plus/barcode.html
+++ b/plus/barcode.html
@@ -108,7 +108,7 @@
 								}, "信息框", "确定");
 							}
 						} else {
-							alert(xhr.responseText);
+							alert("链接服务器错误，上传失败");
 							console.log("responseText: " + xhr.responseText);
 						}
 					}
