--- a/plus/reworkresult.html
+++ b/plus/reworkresult.html
@@ -45,8 +45,9 @@
 					// plus.storage.setItem("reworkResult", '');
 					// 上衣:其他(二维码):浅花灰:5:DGF7057779:33:2:斐乐:KF174TK22B:170
 					result = result.split(":");
+					var seqno = plus.storage.getItem("processNum") ? plus.storage.getItem("processNum") : 0;
 					domItem = document.createElement('ul');
-					domItem.innerHTML = '<li>制单号：<span>' + result[8] + '</span></li><li>颜色：<span>' + result[2] + '</span></li><li>缸号：<span>' + result[4] + '</span></li><li>扎号：<span>' + result[5] + '</span></li><li>床次：<span>' + result[6] + '</span></li><li>品牌：<span>' + result[7] + '</span></li><li>尺码：<span>' + result[9] + '</span></li><li>工序：<input type="number" value="0"></li><li>数量：<input type="number" value="0"></li><li>查货日期：<input type="date" value="' + d +'"></li><li>查货人员：<input type="text" value="' + user.EmployeeName_User + '"></li><li>返工人员：<input type="text" value="' + user.EmployeeName_User + '"></li><li>返工原因：<textarea type="text" rows="4"></textarea></li>';
+					domItem.innerHTML = '<li>制单号：<span>' + result[8] + '</span></li><li>颜色：<span>' + result[2] + '</span></li><li>缸号：<span>' + result[4] + '</span></li><li>扎号：<span>' + result[5] + '</span></li><li>床次：<span>' + result[6] + '</span></li><li>品牌：<span>' + result[7] + '</span></li><li>尺码：<span>' + result[9] + '</span></li><li>查货日期：<span>' + d + '</span></li><li>查货人员：<span>' + user.EmployeeName_User + '</span></li><li>原数量：<span>' + result[3] + '</span></li><li>修改数量：<input id="changeNum" type="number" value="' + result[3] + '"></li><li>工序：<input id="seqno" type="number" value="' + seqno + '"></li><li>返工原因：<textarea type="text" rows="4"></textarea></li>';
 					document.getElementById('resultList').appendChild(domItem);
 				}
 			}
@@ -65,6 +66,24 @@
 			function goback() {
 				plus.webview.currentWebview().close("slide-out-left", null);
 				plus.webview.getWebviewById("rework.html").show();
+			}
+
+			function sendData() {
+				var data = {};
+				data.empcode = JSON.parse(localStorage.getItem("user"))[0].EmployeeNo;
+				data.orderno = result[8];
+				data.seqno = document.getElementById('seqno').value;
+				data.bedno = result[6];
+				data.groupno = result[5];
+				data.color = result[2];
+				data.sizes = result[9];
+				data.quantity = result[3];
+				data.reworkqty = document.getElementById('changeNum').value;
+				var url = 'http://1y94182m45.51mypc.cn:30080/mobileticket/index.php/apis/MobileTicket/insertRework';
+				var callback = function(resp) {
+					console.log(resp);
+				}
+				submitPost(url, data, callback);
 			}
 		</script>
 	</head>
@@ -90,7 +109,7 @@
 			<div class="resultList" id="resultList">
 			</div>
 			<div class="submit">
-				<button onclick="goback()">确 认</button>
+				<button onclick="sendData()">确 认</button>
 				<button onclick="goback()">取消</button>
 			</div>
 		</div>
